kubernetes/icpc.programme.lv/icpc_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icpc
  namespace: proglv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: icpc
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: icpc
    spec:
      containers:
        - name: icpc
          image: krisjanisp/icpc-docs:latest
          ports:
            - name: http
              containerPort: 80
