kubernetes/icpc.programme.lv/icpc_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icpc
  namespace: proglv
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: icpc
