kubernetes/icpc.programme.lv/icpc_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: icpc
  namespace: proglv
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
      - icpc.programme.lv
      secretName: letsencrypt-nginx-icpc
  rules:
    - host: icpc.programme.lv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: icpc
                port:
                  number: 80
  ingressClassName: nginx
